# desci-workflow-template

./: .devcontainer.json  .gitignore  Justfile  _quarto.yml  config.toml  flake.nix  index.html  jupyenv.toml  prefect-examples.html  prefect-tasks.html  prefect.html  pyproject.toml  python.html  search.json  spiffworkflow-cli.html  spiffworkflow.html
.github/workflows/: checks.yaml  publish.yaml
docs/: config.toml
docs/notebooks/: pythonKenrel.ipynb
docs/org/: prefect-examples.org  prefect-tasks.org  prefect.org  python.org  spiffworkflow-cli.org  spiffworkflow.org
docs/quarto/: _quarto.yml  index.qmd  spiffworkflow-cli.qmd
jobs/prefect/: sequential.py
nix/automation/: just.nix
nix/automation/containers/: default.nix
nix/automation/devshells/: default.nix
nix/automation/entrypoints/: default.nix
nix/julia/: lib.nix
nix/kernels/: config.nix  devshellProfiles.nix  entrypoints.nix  packages.nix
nix/python/: config.nix  lib.nix  nixago.nix  packages.nix
nix/python/config/: config.nix
site_libs/bootstrap/: bootstrap.min.css
