[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["guangtao <gtrunsec@hardenedlinux.org>", "GTrunSec <gtrunsec@hardenedlinux.org>"]
description = ""
name = "desci-python"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = ">=0.17.0"
alembic = ">=1.7.5"
anyio = ">=3.4.0"
apprise = ">=1.1.0"
asgi-lifespan = ">=1.0"
asyncpg = ">=0.23"
click = ">=8.0,<8.2"
cloudpickle = ">=2.0"
coolname = ">=1.0.4"
croniter = ">=1.0.12"
cryptography = ">=36.0.1"
dateparser = "^1.1.5"
docker = ">=4.0"
fastapi = ">=0.70"
fsspec = ">=2022.5.0"
griffe = ">=0.20.0"
jinja2 = "^3.1.2"
jsonpatch = ">=1.32"
kubernetes = ">=24.2.0"
orjson = ">=3.7"
packaging = ">=21.3"
pathspec = ">=0.8.0"
pendulum = ">=2.1.2"
pydantic = ">=1.10.0"
python = "^3.10"
python-slugify = ">=5.0"
pytz = ">=2021.1"
pyyaml = ">=5.4.1"
readchar = ">=4.0.0"
rich = ">=11.0"
toml = ">=0.10.0"
typer = ">=0.4.2"
typing-extensions = ">=4.1.0"
uvicorn = ">=0.14.0"
websockets = ">=10.4"

[tool.poetry.dependencies.httpx]
extras = ["http2"]
version = ">=0.23"

[tool.poetry.dependencies.importlib-metadata]
markers = "python_version < \"3.10\""
version = ">=4.4"

[tool.poetry.dependencies.jsonschema]
version = ">=3.2.0,<5.0.0"

[tool.poetry.dependencies.sqlalchemy]
extras = ["asyncio"]
version = ">=1.4.22,<2.0"

[tool.poetry.group]
[tool.poetry.group.aws.dependencies.prefect-aws]
git = "https://github.com/PrefectHQ/prefect-aws"

[tool.poetry.group.data.dependencies]
polars = "^0.16.7"

[tool.poetry.group.jupyenv.dependencies]
ipykernel = "^6.19.4"
ipywidgets = "^8.0.2"

[tool.poetry.group.jupyter.dependencies.prefect-jupyter]
git = "https://github.com/PrefectHQ/prefect-jupyter"
